--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
       "@/*": ["./*"],
       "@components/*": ["components/*"],
       "@lib/*": ["lib/*"],
-      "@types/*": ["types/*"]
+      "@schemas/*": ["types/*"]
     },
     "plugins": [
       {
