--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@supabase/supabase-js": "^2.50.3",
     "@tiptap/pm": "^2.24.2",
     "@tiptap/react": "^2.24.2",
     "@tiptap/starter-kit": "^2.24.2",
     "@types/nodemailer": "^6.4.17",
+    "firebase": "^9.23.0",
+    "firebase-admin": "^11.11.0",
     "lucide-react": "^0.525.0",
     "next": "^14.2.30",
     "nodemailer": "^7.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "xlsx": "^0.18.5",
-    "zod": "^3.25.74",
-    "firebase": "^9.23.0",
-    "firebase-admin": "^11.11.0"
+    "zod": "^3.25.74"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
