--- a/.env.local
+++ b/.env.local
@@ -6,10 +6,13 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=https://placeholder.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=placeholder-anon-key
-SUPABASE_SERVICE_ROLE_KEY=placeholder-service-role-key
+# Firebase Configuration
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyDOw-JvmCM_SEoGHy9wISd9bSv2WarUvCM
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=nonprofit-dashboard27.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=nonprofit-dashboard27
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=nonprofit-dashboard27.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=11654339090
+NEXT_PUBLIC_FIREBASE_APP_ID=1:11654339090:web:4d8052706502b0473cd6cb
 
 # Email Configuration (Gmail SMTP)
 EMAIL_FROM=bladimir.garcia@riseforhope.org
